# wasm-nn

./: .gitignore  Cargo.toml  README.md  index.html
burn-wasm/: Cargo.toml  Makefile
burn-wasm/src/: build.rs  lib.rs  main.rs
burn-wasm/src/model/: mod.rs  nn.mpk  nn.rs
candle-wasm/: Cargo.toml  Makefile
candle-wasm/src/: lib.rs  main.rs  nn.onnx
nn/: model.py  notebook.ipynb  requirements.txt
nn/.ipynb_checkpoints/: notebook-checkpoint.ipynb
react-wasm/: bun.lockb  package-lock.json  package.json  vite.config.ts
react-wasm/src/: App.css  App.tsx  index.css
react-wasm/src/components/: Display.tsx  button.tsx  candle.tsx  onnx.tsx
src/: lib.rs  main.rs
tract-wasm/: Cargo.toml
tract-wasm/src/: lib.rs  main.rs
