[package]
name = "burn-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.88"
burn = { version = "0.11.0", features = ["wasm-sync", "train", "wgpu"] }
serde = { version = "1.0.193", features = ["derive"] }
burn-ndarray = "0.11.0"

[build-dependencies]
burn-import = "0.11.0"
